<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fondo_layouts"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kamarena.pfc.quiniclubs.Registro"
    >

    <LinearLayout
        android:id="@+id/lay_registro_titulo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:id="@+id/iv_registro_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/lb_registro_titulo"
            style="@style/titulo_layouts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/titulo_registro"
            />

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_registro_usuario"
        android:layout_below="@+id/lay_registro_titulo"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_usuario"
        android:inputType="text"
        android:singleLine="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_registro_password"
        android:layout_below="@+id/et_registro_usuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/et_registro_apellidos"
        android:layout_alignEnd="@+id/et_registro_apellidos"
        android:hint="@string/hint_password"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_registro_password2"
        android:layout_below="@+id/et_registro_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/et_registro_apellidos"
        android:layout_alignEnd="@+id/et_registro_apellidos"
        android:hint="@string/hint_password2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_registro_email"
        android:layout_below="@+id/et_registro_password2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_registro_nombre"
        android:layout_below="@+id/et_registro_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_nombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_registro_apellidos"
        android:layout_below="@+id/et_registro_nombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPersonName"
        android:hint="@string/hint_apellidos" />

    <Button
        style="@style/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_registrar"
        android:id="@+id/bt_registro_registrar"
        android:layout_below="@+id/et_registro_apellidos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/et_registro_apellidos"
        android:layout_alignEnd="@+id/et_registro_apellidos" />

    <Button
        style="@style/boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancelar"
        android:id="@+id/bt_registro_cancelar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/bt_registro_registrar"
        android:layout_alignEnd="@+id/bt_registro_registrar"
        />

</RelativeLayout>
